<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".ui.registration.RegistrationFragment">

    <ImageView
        android:id="@+id/topLeftLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_top_left_login"/>

    <ImageView
        android:id="@+id/topRightLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_top_right_login"/>

    <TextView
        android:id="@+id/noInternetMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/error"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:text="@string/no_internet_message"
        android:gravity="center"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/loginTriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topLeftLogin"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toStartOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="128dp"
        android:src="@drawable/ic_login_triangle"/>

    <TextView
        android:id="@+id/loginAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_app_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textFontWeight="900"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLeftLogin"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintStart_toEndOf="@id/loginTriangle"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="80dp"
        app:layout_constraintTop_toBottomOf="@id/topRightLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginButton">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textFontWeight="900" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            android:hint="@string/email_input"
            android:layout_marginHorizontal="24dp"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:maxLines="1"
                android:textColor="@color/login_edit_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            android:hint="@string/password_input"
            android:layout_marginHorizontal="24dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/login_edit_text_color"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/login_edit_text_color"
                android:maxLines="1"
                android:fontFamily="@font/roboto" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatedPasswordInput"
            android:hint="@string/repeat_password_input"
            android:layout_marginHorizontal="24dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/login_edit_text_color"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/login_edit_text_color"
                android:maxLines="1"
                android:fontFamily="@font/roboto" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:fontFamily="@font/roboto"
            android:text="@string/registration_error_message"
            android:textColor="@color/error"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:visibility="gone"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        app:cornerRadius="24dp"
        android:paddingVertical="8dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/registration_button"
        android:textFontWeight="700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/LoginButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>