<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/bottom_sheet_review_title"/>

            <ImageView
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_close_dialog"
                tools:src="@drawable/ic_close_dialog"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            android:numStars="5"
            android:rating="0"
            android:progressTint="@color/login_button_enabled_text_color"
            android:secondaryProgressTint="@android:color/transparent"
            android:progressBackgroundTint="@color/material_on_surface_stroke"
            android:stepSize="1" />

        <TextView
            android:id="@+id/ratingBarError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginHorizontal="24dp"
            android:textColor="@color/error"
            android:text="@string/rating_bar_error"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reviewInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bottom_sheet_edit_text_hint"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            app:boxStrokeColor="@color/review_text_input"
            app:hintTextColor="@color/login_button_enabled_text_color"
            android:textColorHint="@color/login_button_enabled_text_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textFontWeight="400"
                android:textColor="@color/login_button_enabled_text_color"
                android:fontFamily="@font/roboto" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/bottom_sheet_review_button"
            android:backgroundTint="@color/login_button_enabled_text_color"
            app:cornerRadius="40dp"
            android:textSize="16sp"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>