<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profilePictureCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        app:cardCornerRadius="48dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/login_button_enabled_text_color">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_profile_placeholder" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/profilePictureCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/changeProfilePhotoButton"
        android:textAlignment="center"
        tools:text="ime.prezime@email.com"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeProfilePhotoButton"
        app:cornerRadius="24dp"
        android:paddingVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/change_profile_photo_button"
        android:textColor="@color/login_button_enabled_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/login_button_enabled_text_color"
        app:strokeWidth="2dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/profile_image_upload_error"
        android:textColor="@color/error"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/changeProfilePhotoButton"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        app:cornerRadius="24dp"
        android:paddingVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/logout_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textFontWeight="700"
        app:layout_constraintTop_toBottomOf="@id/errorMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        android:backgroundTint="@color/login_button_enabled_text_color"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>